# events_app

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: admin.py  models.py
accounts/api/: serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options.py
events/: admin.py  email.py  models.py  signals.py  tasks.py
events/api/: cache.py  serializers.py  urls.py  views.py
events/api/tests/: fakeData.py  tests.py
events/migrations/: 0001_initial.py  0002_alter_category_title_alter_events_description_and_more.py  0003_events_users.py
events_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: BaseTests.py  fakeData.py
