[tool.poetry]
name = "events-app"
version = "0.1.0"
description = ""
authors = ["Roman <roma.makhunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
django = "4.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^21.2.0"
celery = {extras = ["amqp", "redis"], version = "^5.3.6"}
django-debug-toolbar = "^4.3.0"
django-celery-beat = "^2.5.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
faker = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
